fixed section size on mobile and desktop

--- a/src/styles/output.css
+++ b/src/styles/output.css
@@ -157,6 +157,8 @@ a {
 body {
   background-color: rgba(1, 4, 9, 0.93);
   color: hsl(215.4, 16.3%, 56.9%);
+  user-select: none;
+  scroll-behavior: smooth;
 }
 
 .offset {
@@ -189,6 +191,7 @@ body {
   left: 0;
   right: 0;
   z-index: 99;
+  color: white;
   background-color: rgba(1, 4, 9, 0.4);
   backdrop-filter: blur(8px);
   border-bottom: 1px solid rgba(128, 128, 128, 0.24);
@@ -355,7 +358,7 @@ section.skills .skills-center {
   content: "";
   grid-column: 1;
   grid-row: 1/span 20;
-  background: linear-gradient(115deg, #4fcf70, #fad648, #a767e5, #12bcfe, #44ce7b);
+  background: linear-gradient(115deg, #4fcf70, #fad648, #a767e5, rgba(18, 188, 254, 0.55), #44ce7b);
   border-radius: calc(var(--line-w) / 2);
 }
 .timeline-1 .timeline-card:not(:last-child), .timeline-2 .timeline-card:not(:last-child) {
